--- a/OSDMBackendAPI/pom.xml
+++ b/OSDMBackendAPI/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.osdm.api</groupId>
-	<artifactId>zoomable-map-data-api</artifactId>
+	<artifactId>osdm-spring-boot-app</artifactId>
 	<version>1.0.0</version>
 	<name>osdm-spring-boot-app</name>
 	<description>OSDM project backend api</description>
@@ -45,6 +45,11 @@
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger-ui</artifactId>
 		    <version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 
