--- a/OSDMDashboard/package.json
+++ b/OSDMDashboard/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.1.3",
     "@types/d3": "^5.7.2",
     "angular-bootstrap-md": "^8.3.0",
+    "angular-emoji": "^0.1.45",
     "bootstrap": "^4.3.1",
     "d3": "^5.12.0",
     "mdbootstrap": "^4.8.10",
