--- a/OSDMDashboard/package.json
+++ b/OSDMDashboard/package.json
@@ -21,8 +21,8 @@
     "@angular/platform-browser": "~8.1.3",
     "@angular/platform-browser-dynamic": "~8.1.3",
     "@angular/router": "~8.1.3",
-    "@types/d3": "^5.7.2",
     "angular-bootstrap-md": "^8.3.0",
+    "angular-d3-charts": "^5.0.0",
     "angular-emoji": "^0.1.45",
     "bootstrap": "^4.3.1",
     "d3": "^5.12.0",
@@ -32,13 +32,14 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.3",
+    "@angular-devkit/build-angular": "^0.803.21",
     "@angular/cli": "~8.1.3",
     "@angular/compiler-cli": "~8.1.3",
     "@angular/language-service": "~8.1.3",
-    "@types/node": "~8.9.4",
+    "@types/d3": "^5.7.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
